--- a/Object Detection/SAR_od.ipynb
+++ b/Object Detection/SAR_od.ipynb
@@ -43,6 +43,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7d368881-101d-4146-8b9b-c1b9cf3317c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drawbbox(img, pre, keep = None, color = '#FF4565'):\n",
+    "    img1 = img.copy()\n",
+    "    ImageD = ImageDraw.Draw(img1)\n",
+    "    for i in range(len(pre['boxes'])):\n",
+    "        if keep is not None and i not in keep:\n",
+    "            continue\n",
+    "        box = pre['boxes'][i]\n",
+    "        ImageD.rectangle([(box[0],box[1]),box[2],box[3]],outline= color,width = 2)\n",
+    "        cls_dict = { 'A220':0,\n",
+    "             'A330':1, \n",
+    "             'A320/321':2, \n",
+    "             'Boeing737-800':3,\n",
+    "             'Boeing787':4,\n",
+    "             'ARJ21':5, \n",
+    "             'other':6}\n",
+    "        \n",
+    "        index_dict = {j:i for i,j in cls_dict.items()}\n",
+    "        text = ''\n",
+    "        try:\n",
+    "            label = pre['labels'][i]\n",
+    "            text = text + index_dict[int(label)]\n",
+    "        except:\n",
+    "            pass\n",
+    "        try:\n",
+    "            score = pre['scores'][i]\n",
+    "            text = text + ':' + str(float(score))[:5]\n",
+    "        except:\n",
+    "            pass\n",
+    "        c = (int(box[0]),int(box[1])-12)\n",
+    "        font = ImageFont.truetype('consolab.ttf',size = 11)\n",
+    "        b = ImageD.textbbox(c,text,font)\n",
+    "\n",
+    "        ImageD.rectangle([(b[0],b[1]),b[2]+2,b[3]],fill = color,outline= color)\n",
+    "        ImageD.text(c,text,fill = (255,255,255),font = font,stroke_width=0)\n",
+    "    return img1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d10964da-7526-4058-a5e2-ab559afc3eb8",
    "metadata": {},
@@ -52,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8198391a-99d9-40a2-90ce-ff7ae99c617d",
    "metadata": {
     "tags": []
@@ -66,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1f9d57de-3bf8-40ae-a9f9-7e46d28b89ab",
    "metadata": {},
    "outputs": [],
@@ -105,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f9f8b6eb-42f3-4085-b450-81dac01ab54d",
    "metadata": {},
    "outputs": [
@@ -121,7 +165,7 @@
        "  tensor([312., 882., 383., 934.])]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "94877001-f115-46c6-8b51-fe446ef7b880",
    "metadata": {},
    "outputs": [],
@@ -145,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "958ca43e-f15b-4278-9af3-ead408400840",
    "metadata": {},
    "outputs": [
@@ -157,7 +201,7 @@
        " 'boxes': [tensor([  1., 398., 119., 532.]), tensor([ 10., 232., 114., 331.])]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "391990fd-aad7-432b-957e-3be44b2e545e",
    "metadata": {},
    "outputs": [],
@@ -183,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ddd03b64-fc73-42e2-b795-f4048445aab7",
    "metadata": {},
    "outputs": [],
@@ -262,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c69c4623-fa56-4c5e-9240-8edc92417fea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4be8e9de07e24e4aa506918c2c6034c7",
+       "model_id": "f7c3c89ff88f48e8b7f952278db30b9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "95901e03-2314-4421-840b-8cf295af242b",
    "metadata": {},
    "outputs": [
@@ -301,7 +345,7 @@
        "  tensor([ 89., 557., 161., 599.])]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c5e32ad1-da20-4b3e-a93f-d1a29481fb44",
    "metadata": {},
    "outputs": [],
@@ -329,24 +373,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ad24c6fb-e67c-490d-9723-2c85b014e52c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sar_dataloader = torch.utils.data.DataLoader(sar_dset, batch_size = 8, shuffle = True,collate_fn = collect)"
+    "sar_dataloader = torch.utils.data.DataLoader(sar_dset, batch_size = 16, shuffle = True,collate_fn = collect)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "6872f290-142e-4771-866f-5eec56fb0333",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a89e7a0f0c72432584bf81a6ecad8a37",
+       "model_id": "9fd9087022364f6393fcb6782bb1d740",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "cd1a9de1-9c12-4973-a9f3-dc18d1e04db0",
    "metadata": {},
    "outputs": [],
@@ -397,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "67e4a72f-b09e-45f4-a2ec-208698e95658",
    "metadata": {
     "tags": []
@@ -406,40 +450,48 @@
     {
      "data": {
       "text/plain": [
-       "({'filename': '1797.tif',\n",
-       "  'labels': tensor([0, 6], device='cuda:4'),\n",
-       "  'boxes': tensor([[ 29., 175., 108., 249.],\n",
-       "          [ 34., 455., 182., 587.]], device='cuda:4')},\n",
-       " {'filename': '1640.tif',\n",
-       "  'labels': tensor([0], device='cuda:4'),\n",
-       "  'boxes': tensor([[445., 811., 545., 890.]], device='cuda:4')},\n",
-       " {'filename': '1308.tif',\n",
-       "  'labels': tensor([0], device='cuda:4'),\n",
-       "  'boxes': tensor([[781., 372., 880., 452.]], device='cuda:4')},\n",
-       " {'filename': '1898.tif',\n",
-       "  'labels': tensor([4, 6], device='cuda:4'),\n",
-       "  'boxes': tensor([[585., 646., 738., 758.],\n",
-       "          [847., 184., 989., 314.]], device='cuda:4')},\n",
-       " {'filename': '1191.tif',\n",
-       "  'labels': tensor([4, 6, 4, 6], device='cuda:4'),\n",
-       "  'boxes': tensor([[ 945.,  936., 1023., 1023.],\n",
-       "          [ 639.,  749.,  697.,  803.],\n",
-       "          [ 928.,  780., 1023.,  864.],\n",
-       "          [ 933.,  661., 1016.,  728.]], device='cuda:4')},\n",
-       " {'filename': '1144.tif',\n",
-       "  'labels': tensor([6, 4], device='cuda:4'),\n",
-       "  'boxes': tensor([[461., 294., 599., 422.],\n",
-       "          [459.,  36., 559., 134.]], device='cuda:4')},\n",
-       " {'filename': '120.tif',\n",
-       "  'labels': tensor([6], device='cuda:4'),\n",
-       "  'boxes': tensor([[1.0000e+00, 1.2240e+03, 8.0000e+01, 1.3710e+03]], device='cuda:4')},\n",
-       " {'filename': '1577.tif',\n",
-       "  'labels': tensor([4, 0], device='cuda:4'),\n",
-       "  'boxes': tensor([[188., 138., 258., 197.],\n",
-       "          [121., 439., 187., 512.]], device='cuda:4')})"
+       "({'filename': '1550.tif',\n",
+       "  'labels': tensor([6, 0], device='cuda:4'),\n",
+       "  'boxes': tensor([[547., 505., 599., 573.],\n",
+       "          [545., 386., 599., 473.]], device='cuda:4')},\n",
+       " {'filename': '1422.tif',\n",
+       "  'labels': tensor([6, 6], device='cuda:4'),\n",
+       "  'boxes': tensor([[ 32.,  23.,  60.,  54.],\n",
+       "          [ 82., 129., 113., 164.]], device='cuda:4')},\n",
+       " {'filename': '1118.tif',\n",
+       "  'labels': tensor([6, 5, 6], device='cuda:4'),\n",
+       "  'boxes': tensor([[1243.,  641., 1375.,  766.],\n",
+       "          [1212.,  811., 1373.,  920.],\n",
+       "          [1234.,  981., 1320., 1050.]], device='cuda:4')},\n",
+       " {'filename': '1804.tif',\n",
+       "  'labels': tensor([5, 5], device='cuda:4'),\n",
+       "  'boxes': tensor([[ 17.,  78.,  65., 132.],\n",
+       "          [  1., 293.,  61., 356.]], device='cuda:4')},\n",
+       " {'filename': '1460.tif',\n",
+       "  'labels': tensor([6, 6, 6, 6, 6, 6], device='cuda:4'),\n",
+       "  'boxes': tensor([[383., 314., 440., 355.],\n",
+       "          [326., 309., 365., 344.],\n",
+       "          [235., 476., 282., 532.],\n",
+       "          [171., 470., 215., 522.],\n",
+       "          [105., 461., 147., 513.],\n",
+       "          [ 39., 459.,  80., 511.]], device='cuda:4')},\n",
+       " {'filename': '1026.tif',\n",
+       "  'labels': tensor([0, 1], device='cuda:4'),\n",
+       "  'boxes': tensor([[462., 198., 550., 277.],\n",
+       "          [445., 313., 558., 442.]], device='cuda:4')},\n",
+       " {'filename': '1609.tif',\n",
+       "  'labels': tensor([5, 6, 6], device='cuda:4'),\n",
+       "  'boxes': tensor([[373., 233., 556., 326.],\n",
+       "          [403., 387., 546., 458.],\n",
+       "          [390.,  89., 535., 180.]], device='cuda:4')},\n",
+       " {'filename': '1212.tif',\n",
+       "  'labels': tensor([3, 3, 5], device='cuda:4'),\n",
+       "  'boxes': tensor([[ 961.,  564., 1023.,  658.],\n",
+       "          [ 550.,  903.,  602.,  987.],\n",
+       "          [ 457.,  907.,  521.,  993.]], device='cuda:4')})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,20 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "3a051442-403c-4ad1-8d9e-72c0f1c0ffc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'loss_classifier': tensor(1.9586, device='cuda:4', grad_fn=<NllLossBackward>),\n",
-       " 'loss_box_reg': tensor(0.0178, device='cuda:4', grad_fn=<DivBackward0>),\n",
-       " 'loss_objectness': tensor(0.6917, device='cuda:4', grad_fn=<BinaryCrossEntropyWithLogitsBackward>),\n",
-       " 'loss_rpn_box_reg': tensor(0.0049, device='cuda:4', grad_fn=<DivBackward0>)}"
+       "{'loss_classifier': tensor(1.9350, device='cuda:4', grad_fn=<NllLossBackward>),\n",
+       " 'loss_box_reg': tensor(0.0126, device='cuda:4', grad_fn=<DivBackward0>),\n",
+       " 'loss_objectness': tensor(0.6942, device='cuda:4', grad_fn=<BinaryCrossEntropyWithLogitsBackward>),\n",
+       " 'loss_rpn_box_reg': tensor(0.0079, device='cuda:4', grad_fn=<DivBackward0>)}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,24 +542,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "d43783bc-9219-40b4-9e1f-99f850c1f7b3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "faster_rcnn = torch.load('model/competition1.pt')\n",
     "optimizer = optim.AdamW(faster_rcnn.parameters(), 0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "60535ee9-2e17-4472-84ba-ce9dee8bd680",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3eeedaec697b4fbabbf3d353fdf22df0",
+       "model_id": "10f2057c09824988b7ea042a83764a74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -521,7 +574,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "482746fb54c747a9962f95bde8b95026",
+       "model_id": "ca49159824ba415d9cf358c8adf21f1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -535,7 +588,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9ab3fae424349b49b8ec20eed561d85",
+       "model_id": "935e14575bb445f182aa86f6829a5a8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,7 +602,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35b4b446c1d141dd82274cbcf09edd64",
+       "model_id": "cbacbd2ff86749aeb6e23fe7b56b0eff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "423113999c954c26aa1f7d2a7e8360c9",
+       "model_id": "54a7b8953b264b7cb86a179f4852719e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -577,7 +630,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a42d1b2b748e48cf8d9e313d901abd52",
+       "model_id": "a1baa3509a794627bfefcb1e964d4587",
        "version_major": 2,
        "version_minor": 0
       },
@@ -591,7 +644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55761320f49e4ad78659a7bcac2e5597",
+       "model_id": "1e4f35252147465890f5eafe59fb2441",
        "version_major": 2,
        "version_minor": 0
       },
@@ -605,49 +658,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47f5a33dd5af41a9864b4482843a5885",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e48a9c4a7037430b90f84e00edbe96a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b88509c091645c0b08584bf69b7bb4e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/125 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d34e70e699342c882c2e6c0c3c66f9b",
+       "model_id": "4e78449707a243789167d65e898449b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -692,12 +703,62 @@
    "id": "4d5784e5-c923-4bb3-a560-7b509abff5f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "faster_rcnn.eval()\n",
+    "index = 480\n",
+    "x = [sar_dset.train_img[index].cuda(device)]\n",
+    "labels = sar_dset.train_targets[index]\n",
+    "targets = faster_rcnn(x)[0]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c9c423e-292f-48d0-a73e-8797724e3a0f",
+   "id": "42be0aab-e269-43e3-8d7c-3f8814a237ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = x[0].permute(1,2,0).cpu().numpy()\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f8b1cd6-3d47-4ed2-9ba6-422c462784fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img1 = Image.fromarray(np.array(img*255,dtype = np.uint8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e1ac51-23cc-40d3-8541-8b5dedaf8977",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_nonms = drawbbox(img1,targets)\n",
+    "drawbbox(img_nonms,labels,color = '#24AA12')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3029f1c4-8066-4cbf-96a6-d05035774366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = nms(targets['boxes'], targets['scores'],0.2)\n",
+    "img_nms = drawbbox(img1,targets,keep)\n",
+    "drawbbox(img_nms,labels,color = '#24AA12')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e04886-183a-42f2-9698-fb309ac37f51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -705,7 +766,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb772bc8-c770-40ab-8ce2-5a686a1264d5",
+   "id": "1d13dcca-fa4f-4464-b1d0-9f9365a03d9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f47583d2-3c70-4878-91da-dadf3b281acb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "466f2556-c97c-496f-b623-00649cbede52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a70f326a-2ebe-4ba8-9a91-fab8c6b15a89",
    "metadata": {},
    "outputs": [],
    "source": []
