--- a/Object Detection/CenterNet/train_Demo.ipynb
+++ b/Object Detection/CenterNet/train_Demo.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "9c0310ee-37f6-4089-b17b-dbdeb82ef5fb",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "'train'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "4d2f2ce0-d16f-436c-abbc-bfbab65f4e7a",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "13605732-e111-43c8-bb29-1b8d53fc7fea",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "bac872e6-f873-4ce6-a6bf-e1d66dae1b58",
    "metadata": {
     "tags": []
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "3b15c2b0-fef9-4789-b562-2a15dec42b0a",
    "metadata": {
     "tags": []
@@ -108,8 +108,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 16s, sys: 1.02 s, total: 1min 17s\n",
-      "Wall time: 9.35 s\n"
+      "CPU times: user 57.1 s, sys: 952 ms, total: 58.1 s\n",
+      "Wall time: 8.58 s\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "2bd69c46-e29e-4799-bc5c-57ff09ab2b32",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "8647569d-aefb-4aa3-91ff-a4cebcb2da0d",
    "metadata": {},
    "outputs": [],
@@ -152,17 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "9c99aeb1-08fa-4736-ae37-af5e87aaee8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(3440.4829, device='cuda:4', grad_fn=<NegBackward>)"
+       "tensor(3419.6340, device='cuda:4', grad_fn=<NegBackward>)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,9 @@
    "id": "9ef7d45b-16fd-4b71-8223-2589fa43a463",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.stack()"
+   ]
   },
   {
    "cell_type": "code",
